test/org/midica/testfiles/failing/eff-func-wrong-param-count-2.midica
INCLUDE inc/instruments.midica


0: vol.wait(4,8)
